# facial-recognition

./: .gitignore  CMakeLists.txt  README.md
include/: face_annotator.h  face_context.h  face_detector.h  face_frame_selection.h  face_merging.h  face_node.h  face_preprocessor.h  face_tracker.h
include/face/: annotator.h  context.h  detector.h  frame_selection.h  merging.h  multitracker.h  node.h  preprocessor.h  recognition.h  recognizer.h  track_observer.h  tracker.h  types.h
src/: face_annotator.cpp  face_detector.cpp  face_frame_selection.cpp  face_merging.cpp  face_node.cpp  face_preprocessor.cpp  face_tracker.cpp  main.cpp
src/face/: annotator.cpp  detector.cpp  frame_selection.cpp  merging.cpp  multitracker.cpp  node.cpp  preprocessor.cpp  recognition.cpp  recognizer.cpp  track_observer.cpp  tracker.cpp
